fixed arrows to include an animation and spaced them further from the title, updated occupation/interests in avatar, added a blurb to about and changed spacing of icons

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6, .label {
     animation-name: toggle;
     animation-duration: 1s;
     animation-timing-function: linear;
-    animation-iteration-count: 5;
+    animation-iteration-count: 8;
 }
 
 .toggle {
@@ -76,7 +76,7 @@ a {
     color: white;
 }
 
-a:active, a:hover {
+a:active, a:hover, .aboutLinks:hover {
     transform: scale(1.1);
     color: lime;
 }
